== HEAD

Features:
* Update rspec to 3.0.0 (mootpointer)
* #681 - Performance: fewer hotspot object allocations (srawlins)
* #745 - Added support for the null envelope sender, per RFC 3464 (raindrift)

Performance:

Bugs:
* #736 - Mail.new copes with non-UTF8 messages marked as UTF8 (jeremy)

== Version 2.6.1 - Sun Jun 8 15:34 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>

Features:
* Silence warnings on loading ragel-generated parsers (bf4)

== Version 2.6.0 - Mon Jun 2 22:49 +1100 2014 Mikel Lindsaar <mikel@reinteractive.net>

Features:
* Allow interceptors and observers to be unregistered (zuhao)
* Added feature to find the mail in uid (taketin)
* Save settings passed to TestMailer#new (svanderbleek)
* Allow the setting of envelope from directly (jeremy)
* Accept other IETF/IANA-registered Content-Types and Content-Transfer-Encodings (jeremy)
* Alias shift-jis charset to Shift_JIS Ruby encoding (jeremy)
* Add support for ks_c_5601-1987 charset, aliased to CP949 Ruby encoding (jeremy)
* Don't allow colons in header names (jeremy)
* Can assign arrays of Message-IDs to References and In-Reply-To (jeremy)
* Setting the html_ or text_part sets a default text/html or text/plain content type (jeremy)
* Setting the html_ or text_part to nil removes it (jeremy)
* Addresses without a parsable email or display name still format as their raw text (jeremy)
* Close pull request 504 - Alias GB2312 charset to GB18030 Ruby encoding (bpot)
* Close pull request 399 - Accept :ca_path and :ca_file options for SMTP delivery (ndbroadbent)
* Close pull request 389 - Don't add superfluous message headers to MIME parts (djmaze, jeremy)

Performance:
* Migrate to RAGEL based parser, awesome work by (bpot)
* Performance improvements for people parsing email headers (ConradIrwin)
* Close pull request 488 - Speed up field construction & comparison (bpot)

Bugs:
* Fix for when content looks like field name (kjg)
* Don't change original when you change a copy (TylerRick)